<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".label.TextFieldFormattingActivity">

    <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:mapbox_cameraTargetLat="19.948045"
            app:mapbox_cameraTargetLng="-84.654463"
            app:mapbox_cameraZoom="3.371717" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/multiple_text_field_actions_parent_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            app:fab_addButtonColorNormal="@color/mapboxRed"
            app:fab_addButtonColorPressed="@color/mapboxWhite"
            app:fab_addButtonPlusIconColor="@color/mapboxWhite"
            app:fab_labelStyle="@style/menu_labels_style">

        <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_toggle_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/mapboxBlue"
                app:fab_colorPressed="@color/mapboxWhite"
                app:fab_size="mini"
                app:fab_title="@string/fab_toggle_font" />

        <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_toggle_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/mapboxGreen"
                app:fab_colorPressed="@color/mapboxWhite"
                app:fab_size="mini"
                app:fab_title="@string/fab_toggle_text_size" />

        <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_toggle_text_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/mapboxRed"
                app:fab_colorPressed="@color/mapboxWhite"
                app:fab_size="mini"
                app:fab_title="@string/fab_toggle_text_color" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</androidx.coordinatorlayout.widget.CoordinatorLayout>