<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".layer.ColorSwitcherActivity">
    <LinearLayout
            android:id="@+id/color_picker_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:paddingTop="24dp">

        <Spinner
                android:id="@+id/layerPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/layer_spinner_array"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_text_red"/>

            <SeekBar
                    android:id="@+id/redSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="255"
                    android:progress="202"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_text_green"/>

            <SeekBar
                    android:id="@+id/greenSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="255"
                    android:progress="210"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_text_blue"/>

            <SeekBar
                    android:id="@+id/blueSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="255"
                    android:progress="211"/>

        </LinearLayout>
    </LinearLayout>

    <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/color_picker_content"
            app:mapbox_cameraTargetLat="45.4385"
            app:mapbox_cameraTargetLng="12.338"
            app:mapbox_cameraZoom="17.4"/>
</RelativeLayout>